chore :lipstick: se mejora el dieño del login home y create account

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,16 @@
   <div class="container">
     <div class="image-container">
       <div class="container_image">
-        <img src="./storage/img/Pic.svg" alt="Illustration">
+        <img src="./storage/img/ojitos.svg" alt="Illustration">
+        <h1>Welcome to </h1>
+        <h2>Cinema</h2>
+        <h3>CINEMA CAMPUS</h3>
+        <img src="./storage/img/Ellipse 113.svg" alt="Ellipse">
       </div>
     </div>
     <div class="content-container">
       <div class="text-container">
-        <h1>Explore the app</h1>
+
         <p>Now your finances are in one place and always under control</p>
       </div>
       <div class="link-container">
